Release 1.0.5

  * Use a platform independent method to change the mode of folders and files.
  * Remove dependency on argparse 1.2, use Python included version of argparse.


2014-05-12  Release 1.0.4

  * Bug fix for getting violations from Sonar.
  * Give a warning when a specific metric can't be retrieved via the Sonar API.


2014-05-12  Release 1.0.3

  * Use only the Sonar API to access Sonar.


2014-05-09  Release 1.0.2

  * Add debug logging to Sonar metric source.


2014-05-08  Release 1.0.1

  * Add document age metric.


2014-04-24  Release 1.0 

  * Initial release to PyPI.