@@ -1,4 +1,4 @@
 language: python
-install: pip install -r python/requirements.txt --allow-external argparse
+install: pip install -r python/requirements.txt
 script: python python/run_unittests.py discover -s python/unittests -p "*_tests.py"
 
